# cleanset

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish-pypi-token.yml  publish-pypi.yml  publish-testpypi.yml
src/cleanoutliers/: __init__.py  core.py
tests/: test_core.py
