[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "cleanoutliers"
version = "0.1.0"
description = "A small Python library to detect and remove outliers from datasets."
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [
  { name = "Your Name", email = "you@example.com" }
]
keywords = ["outlier", "data-cleaning", "statistics", "machine-learning"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Information Analysis"
]
dependencies = [
  "numpy>=1.23"
]

[project.optional-dependencies]
pandas = ["pandas>=1.5"]
dev = [
  "pytest>=8.0",
  "build>=1.2.0",
  "twine>=5.0.0",
  "ruff>=0.6.0"
]

[tool.hatch.build.targets.wheel]
packages = ["src/cleanoutliers"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py39"
